# prfh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: README.md
.claude/skills/: README.md
.claude/skills/effects/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/net-sync/: SKILL.md
.claude/skills/visual-companion/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  mechanic.yml
.github/workflows/: ci.yml
assets/ascii/bosses/: the_nitpicker.txt
assets/words/: nitpicks.txt
docs/: 01-game-design-doc.md  02-twist-storyboard.md  03-tech-architecture.md  04-review-addendum.md  05-write-to-move.md
docs/superpowers/plans/: 2026-06-22-multiplayer.md  2026-06-23-arena-world-substrate-w1.md  2026-06-23-effects-tachyonfx-layer.md  2026-06-23-issue-0-ratatui-030-upgrade.md  2026-06-23-slim-app-hud-theme.md  2026-06-24-hud-inventory-pickup-spawn.md  2026-06-24-powerup-pickup-feel.md  2026-06-24-w2-powerup-inventory-engine.md  2026-06-26-dash-skill-targeting-framework.md
docs/superpowers/specs/: 2026-06-22-multiplayer-design.md  2026-06-22-powerup-inventory-effects-design.md  2026-06-22-two-claude-collaboration-design.md  (+6 more)
examples/: hud_lab.rs
src/: app.rs  lib.rs  main.rs  theme.rs
src/effects/: mod.rs
src/game/: arena.rs  inventory.rs  mod.rs  powerup.rs  shell.rs  skill.rs  world.rs  writing.rs
src/hud/: mod.rs  notify.rs
src/net/: client.rs  discovery.rs  mod.rs  protocol.rs  server.rs
src/render/: mod.rs
tests/: app_integration.rs  host_client_e2e.rs  host_handshake.rs  world_sync_e2e.rs
