[package]
name = "prfh"
version = "0.0.1"
edition = "2021"
description = "Pull Request From Hell — Sadistisches Terminal-Horror-Roguelike"
license = "MPL-2.0"
repository = "https://github.com/bardimardy/prfh"
readme = "README.md"
keywords = ["game", "roguelike", "terminal", "tui", "typing"]
categories = ["games"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
